--- a/appveyor.yml
+++ b/appveyor.yml
@@ -92,15 +92,13 @@ install:
 
 before_build:
   - cmd: |
-      if not "%APPVEYOR_REPO_TAG%" == "true" set CI_REPO_TAG_NAME=latest
-      set BUILD_SOURCE_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%APPVEYOR_REPO_TAG_NAME%%CI_REPO_TAG_NAME%-src.zip
+      if "%APPVEYOR_REPO_TAG%" == "true" ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME% ) else set CI_REPO_TAG_NAME=latest
+      set BUILD_SOURCE_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-src.zip
       7z a -tzip %BUILD_SOURCE_ARCHIVE% %APPVEYOR_BUILD_FOLDER%
       cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" -A %CMAKE_ARCHITECTURE% -DCMAKE_INSTALL_PREFIX=%APPVEYOR_BUILD_FOLDER%\Coin3D
   - sh: |
-      if [ "$APPVEYOR_REPO_TAG" != "true" ]; then
-        CI_REPO_TAG_NAME=latest
-      fi
-      BUILD_SOURCE_ARCHIVE=$APPVEYOR_PROJECT_NAME-$APPVEYOR_REPO_TAG_NAME$CI_REPO_TAG_NAME-src.tar.gz
+      if [ "$APPVEYOR_REPO_TAG" == "true" ]; then export CI_REPO_TAG_NAME=$APPVEYOR_REPO_TAG_NAME; else export CI_REPO_TAG_NAME=latest; fi
+      BUILD_SOURCE_ARCHIVE=$APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-src.tar.gz
       tar -czvf $BUILD_SOURCE_ARCHIVE $APPVEYOR_BUILD_FOLDER/*
       export CFLAGS=$CMAKE_ARCH_FLAGS
       export CXXFLAGS=$CMAKE_ARCH_FLAGS
@@ -120,18 +118,16 @@ build_script:
 after_build:
   - cmd: |
       cd %APPVEYOR_BUILD_FOLDER%
-      if not "%APPVEYOR_REPO_TAG%" == "true" set CI_REPO_TAG_NAME=latest
-      set BUILD_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%APPVEYOR_REPO_TAG_NAME%%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.zip
+      if "%APPVEYOR_REPO_TAG%" == "true" ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME% ) else set CI_REPO_TAG_NAME=latest
+      set BUILD_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.zip
       7z a -tzip %BUILD_ARCHIVE% Coin3D
-      appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/%APPVEYOR_JOB_ID%/log -FileName %APPVEYOR_PROJECT_NAME%-%APPVEYOR_REPO_TAG_NAME%%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.log
+      appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/%APPVEYOR_JOB_ID%/log -FileName %APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.log
   - sh: |
       cd $APPVEYOR_BUILD_FOLDER
-      if [ "$APPVEYOR_REPO_TAG" != "true" ]; then
-        CI_REPO_TAG_NAME=latest
-      fi
-      BUILD_ARCHIVE=$APPVEYOR_PROJECT_NAME-$APPVEYOR_REPO_TAG_NAME$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.tar.gz
+      if [ "$APPVEYOR_REPO_TAG" == "true" ]; then export CI_REPO_TAG_NAME=$APPVEYOR_REPO_TAG_NAME; else export CI_REPO_TAG_NAME=latest; fi
+      BUILD_ARCHIVE=$APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.tar.gz
       tar -czvf $BUILD_ARCHIVE Coin3D/*
-      appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/$APPVEYOR_JOB_ID/log -FileName $APPVEYOR_PROJECT_NAME-$APPVEYOR_REPO_TAG_NAME$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.log
+      appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/$APPVEYOR_JOB_ID/log -FileName $APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.log
 
 artifacts:
   - path: $(APPVEYOR_PROJECT_NAME)*.zip
