--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
 version: 1.3.0-{branch}-ci-{build}
 
+branches:
+  only:
+  - master
+  - /v\d*\.\d*\.\d*/
+
 # do not build feature branches with open pull requests
 skip_branch_with_pr: true
 
@@ -89,12 +94,12 @@ install:
 # Assumes that you use the vx.y.z tagging scheme (e.g. v1.3.0)
 before_build:
   - cmd: |
-      if "%APPVEYOR_REPO_TAG%" == "true" ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME:~1% ) else set CI_REPO_TAG_NAME=latest
+      if defined APPVEYOR_REPO_TAG_NAME ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME:~1% ) else ( set CI_REPO_TAG_NAME=latest )
       set BUILD_SOURCE_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-src.zip
       7z a -tzip %BUILD_SOURCE_ARCHIVE% %APPVEYOR_BUILD_FOLDER%
       cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" -A %CMAKE_ARCHITECTURE% -DCMAKE_INSTALL_PREFIX=%APPVEYOR_BUILD_FOLDER%\Coin3D
   - sh: |
-      if [ "$APPVEYOR_REPO_TAG" == "true" ]; then export CI_REPO_TAG_NAME=${APPVEYOR_REPO_TAG_NAME:1}; else export CI_REPO_TAG_NAME=latest; fi
+      if [ -z "${APPVEYOR_REPO_TAG_NAME+x}" ]; then export CI_REPO_TAG_NAME=${APPVEYOR_REPO_TAG_NAME:1}; else export CI_REPO_TAG_NAME=latest; fi
       BUILD_SOURCE_ARCHIVE=$APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-src.tar.gz
       tar -czvf $BUILD_SOURCE_ARCHIVE $APPVEYOR_BUILD_FOLDER/*
       export CFLAGS=$CMAKE_ARCH_FLAGS
@@ -115,13 +120,13 @@ build_script:
 after_build:
   - cmd: |
       cd %APPVEYOR_BUILD_FOLDER%
-      if "%APPVEYOR_REPO_TAG%" == "true" ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME:~1% ) else set CI_REPO_TAG_NAME=latest
+      if defined APPVEYOR_REPO_TAG_NAME ( set CI_REPO_TAG_NAME=%APPVEYOR_REPO_TAG_NAME:~1% ) else ( set CI_REPO_TAG_NAME=latest )
       set BUILD_ARCHIVE=%APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.zip
       7z a -tzip %BUILD_ARCHIVE% Coin3D
       appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/%APPVEYOR_JOB_ID%/log -FileName %APPVEYOR_PROJECT_NAME%-%CI_REPO_TAG_NAME%-%COMPILER_ID%-%CMAKE_PLATFORM%.log
   - sh: |
       cd $APPVEYOR_BUILD_FOLDER
-      if [ "$APPVEYOR_REPO_TAG" == "true" ]; then export CI_REPO_TAG_NAME=${APPVEYOR_REPO_TAG_NAME:1}; else export CI_REPO_TAG_NAME=latest; fi
+      if [ -z "${APPVEYOR_REPO_TAG_NAME+x}" ]; then export CI_REPO_TAG_NAME=${APPVEYOR_REPO_TAG_NAME:1}; else export CI_REPO_TAG_NAME=latest; fi
       BUILD_ARCHIVE=$APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.tar.gz
       tar -czvf $BUILD_ARCHIVE Coin3D/*
       appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/$APPVEYOR_JOB_ID/log -FileName $APPVEYOR_PROJECT_NAME-$CI_REPO_TAG_NAME-$COMPILER_ID-$CMAKE_PLATFORM.log
@@ -168,7 +173,7 @@ deploy:
     auth_token:
       secure: 850frgRGZcc4Cljd2P7Ej68no4/kkl4EMB+DjnX725wcKBRJuFk/kGRdJGyKXd2u # your encrypted token from GitHub
     artifact: CIArchives, logs
-    tag: $(APPVEYOR_REPO_TAG_NAME)
+    tag: $(APPVEYOR_PROJECT_NAME) $(APPVEYOR_REPO_TAG_NAME)
     description: 'Release build'
     draft: true
     prerelease: false
